# hugo-edit

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/conf/: hugo.toml
src-tauri/scripts/: start_hugo.sh
src-tauri/src/: main.rs
src-tauri/src/setup/: base.rs  conf.rs  mod.rs  ws.rs
src/components/: Editor.vue  Greet.vue  Setup.vue
